kubernetes/apps/kubeflow/pipelines/app/patches/patch.cache-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-server
spec:
  template:
    spec:
      containers:
        - name: server
