kubernetes/apps/kubeflow/pipelines/app/patches/patch.kubeflow-pipelines-profile-controller.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-pipelines-profile-controller
spec:
  template:
    spec:
      containers:
        - name: profile-controller
