kubernetes/apps/kubeflow/pipelines/app/patches/patch.ml-pipeline-persistenceagent.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-persistenceagent
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline-persistenceagent
