kubernetes/apps/kubeflow/pipelines/app/patches/patch.ml-pipeline-ui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline-ui
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline-ui
          readinessProbe:
            $patch: delete
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 10
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - wget
                - -q
                - -S
                - -O
                - "-"
                - http://localhost:3000/apis/v1beta1/healthz
