kubernetes/apps/kubeflow/pipelines/app/patches/patch.ml-pipeline-ui.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  http:
    - match:
        - uri:
            prefix: /pipeline
      route:
        - destination:
            host: ml-pipeline-ui.kubeflow.svc.cluster.local
            port:
              number: 80
      headers:
        request:
          set:
            x-forwarded-prefix: /pipeline
