kubernetes/apps/kubeflow/pipelines/app/patches/patch.ml-pipeline-ui.authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
      when:
        - key: request.headers[kubeflow-userid]
          notValues:
            - ""
